--- a/app/scss/sections/_sidebar.scss
+++ b/app/scss/sections/_sidebar.scss
@@ -1,14 +1,17 @@
 @use '../custom' as *;
 
 .hidden-nav-container {
-    display: none;
+    display: block;
+    transition-property: right;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
     position: fixed;
-    z-index: -10;
+    z-index: -100;
     overflow-y: scroll;
     height: 100vh;
     width: 275px;
+    right: -275px;
     top: 0;
-    right: 0;
     background-color: #333645;
     color: white;
     text-transform: uppercase;
@@ -87,7 +90,7 @@
     }
     @media (min-width: map-get($grid-breakpoints, "lg" )) {
         width: 350px;
-        right: 0;
+        right: -350px;
     }
 }
 
